# ssh-mcp-server

./: .gitignore  LICENSE  README.md  claude_desktop_config.example.json  pyproject.toml  ssh_client.py  ssh_mcp_server.py
