[project]
name = "ssh-mcp-server"
version = "1.0.0"
description = "SSH MCP Server for Claude Desktop"
requires-python = ">=3.10"
dependencies = [
    "paramiko>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
